--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
 @custom-variant dark (&:is(.dark *));
 
 * {
-  box-sizing: border-box;
   min-width: 0;
   text-box: trim-both cap alphabetic;
 }
@@ -62,6 +61,10 @@ p {
 
 input, textarea, select {
   field-sizing: content;
+}
+
+body {
+  position: relative;
 }
 
 .dark {
